index canbios lab y examen

--- a/index.html
+++ b/index.html
@@ -522,6 +522,16 @@
                 <button id="ExamPathID" class="btn">Copiar</button>
                 <p><span class="negrita">Headers : </span> Content-Type: FormData</p>
                 <p><span class="negrita">Bearer Token:  </span>"UseToken"</p>
+<pre style="box-sizing: border-box;overflow-x: scroll;">
+  {
+    "exam_name": "Lymph#",
+    "exam_description": "examen de hermatogolia",
+    "exam_indicator": "10-15",
+    "exam_unit": "hz",
+    "exam_price": 4,
+    "exam_id_category": 1
+   }
+  </pre>
             </li>
             <li> 
               <h2 class="negrita">
