nuevos cambios en html sobre parametros y su base de datos

--- a/index_dev.html
+++ b/index_dev.html
@@ -812,18 +812,18 @@
               <li> 
                 <h2 class="negrita">
                     <span class="amarillo">PATH :</span>
-                    Actualiza Parametro
+                    Actualiza Parametro</h2>
                   <p><span class="negrita">EndPoint : </span>http://localhost:1234/parameters/:id</p>
                   <button id="ParameterPathID" class="btn">Copiar</button>
                   <p><span class="negrita">Headers : </span> Content-Type: FormData</p>
                   <p><span class="negrita">Bearer Token:  </span>"UseToken"</p>
   <pre style="box-sizing: border-box;overflow-x: scroll;">
     {
-      "exam_name": "Lymph#",
-      "exam_description": "examen de hermatogolia",
-      "exam_indicator": "10-15",
-      "exam_unit": "hz",
-      "exam_price": 4,
+      "name": "Lymph#",
+      "description": "examen de hermatogolia",
+      "value": "10-15",
+      "unit": "hz",
+      "price": 4,
       "exam_id_category": 1
      }
     </pre>
