editando controllers y model de category

--- a/index_dev.html
+++ b/index_dev.html
@@ -482,19 +482,14 @@
             <p><span class="negrita">Bearer Token:  </span>"UseToken"</p>
 <pre style="box-sizing: border-box;overflow-x: scroll;">
   {
-    "name": "Lymph#",
-    "description": "examen de hermatogolia",
-    "indicator": "10-15",
-    "unit": "hz",
-    "price": 4,
-    "id_category": 1
+    "name": "Hemostasia y tromnbosis"
   }
   </pre>
           </li>
           <li> 
             <h2 class="negrita">
               <span class="amarillo">PATH :</span>
-              Devuelve Categoria de examen por ID
+              Actualiza Categoria por ID
             </h2>
             <p><span class="negrita">EndPoint : </span>http://localhost:1234/categorys/:id</p>
             <button id="CategoryPathID" class="btn">Copiar</button>
@@ -502,12 +497,7 @@
             <p><span class="negrita">Bearer Token:  </span>"UseToken"</p>
 <pre style="box-sizing: border-box;overflow-x: scroll;">
   {
-    "name": "Lymph#",
-    "description": "examen de hermatogolia",
-    "indicator": "10-15",
-    "unit": "hz",
-    "price": 4,
-    "id_category": 1
+    "name": "Perfil Alergias"
   }
   </pre>
           </li>
