nuevos cambios diciembre acomodando cositas

--- a/index.html
+++ b/index.html
@@ -794,11 +794,9 @@
   <pre style="box-sizing: border-box;overflow-x: scroll;">
     {
       "name": "Lymph#",
-      "description": "examen de hermatogolia",
-      "indicator": "10-15",
-      "unit": "hz",
-      "price": 4,
-      "id_category": 1
+      "value": 10.00-20.00,
+      "unit": "mhz",
+      "id_exam": 1
     }
    </pre>
               </li>
@@ -875,7 +873,9 @@
                   {
                     "observation": "normal",
                     "value": "1.5",
-                    "id_exam_order": "2"
+                    "id_parameter": "2",
+                    "id_exam": "2"
+                    "id_order": "2"
                   }
                 </pre>
              </li>
